# portfolio

./: .gitignore  content.json  index.html  script.js  site_architecture.md  style.css
conf/: portfolio-rust.conf  portfolio-ssl.conf  portfolio.conf
rust/: Cargo.toml  output_curl.txt  output_curl_headers.txt
rust/assets/: content.json  style.css
rust/assets/static/: index.html  main.js  patch.js  script.js  wip.html
rust/assets/static/tj-assets/: index-BF37HFjy.css  index-BsvS9NSt.js  index-WS0Gy2Da.js
rust/assets/tech-journey/: index.html
rust/assets/tech-journey/assets/: index-BbNea-qz.css  index-DtPm5Rxh.js
rust/src/: main.rs
rust/templates/: index.html  wip.html
